--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,47 @@
 [package]
-name = "rust-web-serve"
+name = "rust-web-server"
 version = "2.1.0"
-edition = "2021"
-
-[profile.dev]
-opt-level = 0
-
-[profile.release]
-opt-level = 3
+edition = "2024"
+authors = ["ltpp-universe <root@ltpp.vip>"] 
+license = "MIT"
+description = """rust web server"""
+keywords = ["http", "request", "response", "tcp", "redirect"]
+repository = "https://github.com/ltpp-universe/http-type.git"
+categories = ["network-programming", "web-programming"]
+exclude = [
+    "target",
+    "Cargo.lock",
+    "sh",
+    ".github"
+]
 
 [dependencies]
-serde = { version = "1.0.215", features = ["derive"] }
-serde_json = "1.0.116"
-chrono = "0.4"
-http = "1.1.0"
-regex = "1.10.4"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+chrono = "0.4.40"
+http = "1.3.1"
+regex = "1.11.1"
 url = "2.5.4"
-rand = "0.8"
-flate2 = "1.0.30"
-mime_guess = "2.0.4"
+rand = "0.9.0"
+flate2 = "1.1.0"
+mime_guess = "2.0.5"
 percent-encoding = "2.3.1"
-native-tls = "0.2.12"
+native-tls = "0.2.14"
+
+[profile.dev]
+incremental = false
+opt-level = 3
+lto = true
+panic = "unwind"
+debug = false
+codegen-units = 1
+strip = "debuginfo"
+
+[profile.release]
+incremental = false
+opt-level = 3
+lto = true
+panic = "unwind"
+debug = false
+codegen-units = 1
+strip = "debuginfo"
