--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-web-server"
-version = "2.1.1"
+version = "2.1.2"
 edition = "2024"
 authors = ["ltpp-universe <root@ltpp.vip>"] 
 license = "MIT"
@@ -16,17 +16,17 @@ exclude = [
 ]
 
 [dependencies]
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-chrono = "0.4.40"
-http = "1.3.1"
-regex = "1.11.1"
-url = "2.5.4"
-rand = "0.9.0"
-flate2 = "1.1.0"
-mime_guess = "2.0.5"
-percent-encoding = "2.3.1"
-native-tls = "0.2.14"
+serde = { version = "=1.0.219", features = ["derive"] }
+serde_json = "=1.0.140"
+chrono = "=0.4.40"
+http = "=1.3.1"
+regex = "=1.11.1"
+url = "=2.5.4"
+rand = "=0.9.0"
+flate2 = "=1.1.0"
+mime_guess = "=2.0.5"
+percent-encoding = "=2.3.1"
+native-tls = "=0.2.14"
 
 [profile.dev]
 incremental = false
